--- a/services.html
+++ b/services.html
@@ -76,28 +76,6 @@
     </nav>
 
     <div class="container">
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>business casual</strong>
-                    </h2>
-                    <hr>
-                </div>
-                <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
-                </div>
-                <div class="col-md-6">
-                    <p>This is a great place to introduce your company or project and describe what you do.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -108,34 +86,73 @@
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="../img/almond.jpg" alt="">
-                    <h3>CBT</h3>
-                    <p>Stuff</p>
+                    <img class="img-responsive" src="../img/Anxiety.jpg" alt="Flower with Bee">
+                    <h3>Anxiety</h3>
+                    <p>Experiencing anxiety is a natural part of life. When anxiety affects the quality of life of an adult or child or limits performance/potential , the earlier the intervention, the better the prognosis.  Dr. Palcan provides assistance with these and other anxiety issues: 
+                        <br>a.	Generalized Anxiety
+                        <br>	b.	Panic Attacks
+                        <br>	c.	Phobias
+                        <br>	d.	Social Anxiety
+                        <br>	e.	School-related anxiety
+                        <br> 	f.	Obsessive Compulsive Disorder
+                        <br>	g.	Post Traumatic Stress Disorder</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="../img/jellyfish.jpg" alt="">
-                    <h3>Exposure/Response</h3>
-                    <p>Stuff</p>
+                    <img class="img-responsive" src="../img/Depression.jpg" alt="Crying Flower">
+                    <h3>Mood Disorders/Depression</h3>
+                    <p>All people experience depressive symptoms at some point in their lives which resolve with time.    However, depression and other mood disorder range from mild to severe in their impact upon your life.  Dr. Palcan assists people who experience depression due to grief/loss, medical issues, bipolar disorders and other life circumstances.  
+</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="../img/spring.jpg" alt="">
-                    <h3>Couples Counseling</h3>
-                    <p>Stuff</p>
+                    <img class="img-responsive" src="../img/Longterm Illness.jpg" alt="Archway">
+                    <h3>Coping with Medical Conditions</h3>
+                    <p>The most common health problems in the United States  like diabetes, heart disease, stroke, cancer, and arthritis and many other medical issues, require self management skills in order to live as fully as possible. Some such skills  include managing the difficult emotions associated with chronic conditions, dealing with pain and fatigue, decision making, communicating with your family and your medical team, and other skills.  Dr. Palcan offers individual sessions to assist clients to cope with medical conditions.  She is a Master Trainer of Stanford University’s Chronic Disease Self Management Program.
+</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="../img/oilseed.jpg" alt="">
-                    <h3>Group Therapy</h3>
-                    <p>Stuff</p>
+                    <img class="img-responsive" src="../img/Medical and Psych.jpg" alt="Pond">
+                    <h3>Shared medical appointment for chronic and acute medical conditions</h3>
+                    <p>Drs. Palcan and Figueroa provide a dynamic and comprehensive group appointment that provides medical treatment  for both chronic and acute health conditions as well as the highest quality education and guidance in self management. comprehensive treatment  approach to address.</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="../img/lavender.jpg" alt="">
-                    <h3>Conflict/Resolution</h3>
-                    <p>Stuff</p>
+                    <img class="img-responsive" src="../img/Weight Loss.jpg" alt="Bridge">
+                    <h3>Weight Loss</h3>
+                    <p>Obesity is considered one of the most common chronic health conditions in the United States.  If an individual is 100 pounds overweight, his or her life expectancy is 10 years shorter.  Do the math for yourself, one year for every 10 pounds over weight. Dr. Palcan co-developed the MOVE! weight loss program at Bay Pines VA Medical Center and currently is the co-coordinator of the program.  She has been providing weight loss treatment in the civilian sector for years. In her private practice, outside of the VA,  she offers both individual and group weight loss treatment.  Along with the medical expertise of Dr. Figueroa, clients receive a comprehensive, psychological/medical treatment program that results in weight loss results.  
+</p>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="../img/leaf.jpg" alt="">
-                    <h3>Diagnostics</h3>
-                    <p>Stuff</p>
+                    <img class="img-responsive" src="../img/Smoking Cessation.jpg" alt="Clouds">
+                    <h3>Tobacco Cessation</h3>
+                    <p>Tobacco use is the number one cause of preventable death in the United States. The average smoker spends $250,000 over the course of his/her life. Nicotine addiction is one of the most challenging, if not, THE most challenging addictions to successfully eliminate.  As the Health Behavior Coordinator at Bay Pines VA Health Care System,  Dr. Roma Palcan is the developer and coordinator of the Tobacco Free Program.  Outside of the VA, she provides individual tobacco cessation treatment. Within four sessions, many clients are tobacco free. 
+</p>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="../img/Men's Issues.jpg" alt="Bamboo">
+                    <h3>Men's Issues</h3>
+                    <p> Men account for only one third of all who receive psychotherapy.  Why? Men are less likely to seek medical or psychological treatment.  They tend to wait for the situation to be more critical before reaching out.  Men perceive themselves as doers and are more likely to think that, “‘Talking about it won’t change anything!”. Dr. Palcan has specialized in men issues for more than 15 years. She co-hosted a daily live radio program “for men and the women who love them”.  She understands that men and women often have different needs, different ways of manifesting psychological stress and different preferences for solutions.   Dr. Palcan assists men with: career, relationships, psychological stress, addictions, and much more. Her approach is more solution-focused and involves skill building, and  active problem solving.
+</p>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="../img/Adolescence.jpg" alt="Young Flower">
+                    <h3>Adolescence</h3>
+                    <p> Adolescence (12 - 18 years old) is a challenging stage of development, requiring sensitivity and patience. The physical change from child to adult, the transformation of the relationship between youth and parents, peer relationships, social media and the pressure to be perfect, romantic relationships, and navigating the many forks in the road involving leisure, values, and career/college choices mark the landscape, making this one of the most difficult terrains for the family.  Dr. Palcan is a safe adult presence that a teen is able to talk during the strained years of adolescence.  She has true empathy and excellent rapport with teens and is successful in building a bond with them.   She works with adolescents who experience self-destructive behavior, lying, cheating, academic problems, negative attitudes, sibling or peer problems, violent relationships, drugs and alcohol, depression/anxiety, and sexuality issues.   Dr. Palcan builds a bridge between parents and youth,  promoting understanding and communication that results in mutual respect.   </p>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="../img/Couples Therapy.jpg" alt="Two Flowers">
+                    <h3>Relationship Therapy</h3>
+                    <p>All healthy relationships have their trials.  The sooner a couple seeks help, the better, however most are strained for 6 years before they seek counseling. Power struggles, communication problems, sexual dissatisfaction, parenting discrepancies and infidelity are some of  the most common problems that Dr. Palcan provides valuable assistance for.  Couples focus on their interaction as well as self-improvement and self-awareness.   They identify the areas of their relationship that require attention and strategically rebuild their relationship and strengthen motivation, trust, respect, intimacy, and communication . Premarital counseling is another service that Dr. Palcan offers to couples. 
+</p>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="../img/Family Therapy.jpg" alt="Family of Flowers">
+                    <h3>Family Therapy</h3>
+                    <p>Family therapy is very helpful when the emotional health of the family is strained due to major life events or mental health conditions. Families seek counseling in order to generate understanding and solutions.  Divorce, behavioral/academic  issues, conflict, addictions, abuse, or the death or illness of a member often bring a family in for treatment with Dr. Palcan. Treatment promotes understanding and collaboration among family members.  It is solution-focused and promotes connection within the family. 
+</p>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="../img/Christian.jpg" alt="Waterfall">
+                    <h3>Christian Psychotherapy</h3>
+                    <p> Dr. Palcan provides psychotherapy services to individuals across the entire dimension of faith, from those who are not spiritually interest to those who are devout practitioners within a religious communities.  Dr. Palcan assess the spiritual world view of the individual and meets the person where he or she is, utilizing the person’s spiritual strengths for for psychological healing to the degree that the individual is interested.  Dr. Palcan is  specifically trained in the area of Christian Psychotherapy.  Thus, individuals who prefer actively incorporating Christian values and  principles within their treatment, may request this specificity and find great value in Dr. Palcan’s treatment.  She was a member of the Network of Christian Counseling Centers and co-hosted a live daily Christian radio program from her private practice which addressed numerous practical life issues. </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -149,8 +166,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p>Copyright &copy; Roma Palcan 2016
-                    <br>
-                    <small>Photo credit: "Silence" by <a href="https://www.flickr.com/photos/137731904@N05/">N Medd</a> under the <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">Creative Commons License</a></small></p>
                 </div>
             </div>
         </div>
