--- a/index.html
+++ b/index.html
@@ -133,11 +133,6 @@
                             <span class="icon-next"></span>
                         </a>
                     </div>
-                    <h1 class="brand-name">Dr. Roma Palcan</h1>
-                    <hr class="tagline-divider">
-                    <h2>
-                        <small>Welcome</small>
-                    </h2>
                 </div>
             </div>
         </div>
@@ -150,8 +145,6 @@
                         <strong>cares</strong>
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="img/MOM.PNG" alt="Dr. Roma Palcan">
-                    <hr class="visible-xs">
                     <p>When it’s time to seek counsel and guidance from a trusted psychologist….</p>
                     <p>Each person is equipped with many strengths that will get them through difficult times. When it seems like you have exhausted your ideas, a good psychologist provides new understanding, support, and  strategies to understanding yourself and others better and to build coping skills to deal with difficult emotions, relationships and life circumstances.  Take time for yourself and turn your circumstances around.  There is no better investment to make than to strengthen yourself.</p>
                     <p>When selecting a psychologist, look for expertise, character, and good reputation.  Choose someone who you feel comfortable with and who is practiced and wise. Select someone who other psychologists and medical professionals trust with their own family and friends.  Trust Dr. Roma Palcan.</p>
@@ -164,9 +157,11 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>Welcome</strong> to my practice...
+                        <strong>Welcome</strong> to my practice
                     </h2>
                     <hr>
+                    <img class="img-responsive img-border img-left" src="img/Roma1.JPG" align = "left" alt="Dr. Roma Palcan">
+                    <hr class="visible-xs">
                     <p>I am a licensed psychologist in St. Petersburg, Florida with over 20-years of psychological service to adults, couples, families and adolescents.   It is a privilege to assist you with your psychological and relationship stressors with the finest of evidence-based treatments.  Thank you for considering me in as you seek psychological service for yourself or your loved ones.</p>
                 </div>
             </div>
