--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="clearfix">
                     <div class = "col-sm-6 col-xs-12">
-                    <img class="img-responsive img-border img-left" src="img/Roma2.JPG" alt="Dr. Roma Palcan" style = "padding-right: 15px; padding-bottom: 10px;">
+                    <img class="img-responsive img-border img-left" src="img/Roma2.JPG" alt="Dr. Roma Palcan">
                     </div>
                     <hr class="visible-xs">
                     <p>Dr. Roma Palcan is a licensed psychologist with over twenty years of psychological services to adults, children, and families in the state of Florida.  Her private practice opened in 1996 in Clearwater, FL.  For the last 8 years she has been affiliated with Bay Pines VA Health Care System and serves there as the Health Behavior Coordinator where she is the chief consultant to the medical staff  in health coaching and Motivational Interviewing. She has also developed their tobacco cessation  program and co-developed their weight loss program.   She serves as an adjunct faculty at Barry University and supervises both Physician Assistant students and psychology interns at Bay Pines VA Health Care Center. 
